--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    table {
+      background-color: yellow;
+    }
+    th, td {
+      padding: 10px;
+    }
